# MicroTools

./: CMakeLists.txt
source/: CMakeLists.txt  MicroTools.cpp
source/Networking/: Client.cpp  Client.h
source/System/: Array.h  JSON.cpp  JSON.h
